Changelog Notes:
Synchronize Grave Robber with Server.